--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.props
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.props
@@ -28,30 +28,24 @@
       <PreprocessorDefinitions Condition="'$(Option-testnet)' == 'true'">ENABLE_TESTNET;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Option-leveldb)' == 'true'">LEVELDB_ENABLED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(ConfigurationType)'=='DynamicLibrary'">BC_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <!-- HACK : CURL_STATICLIB should be injected by the cURL package. -->
-      <PreprocessorDefinitions Condition="'$(ConfigurationType)'=='StaticLibrary'">BC_STATIC;CURL_STATICLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(ConfigurationType)'=='StaticLibrary'">BC_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
  
   <!-- Dependencies -->
   
   <PropertyGroup Condition="$(Configuration.IndexOf('DLL')) != -1">
-    <Linkage-curl>dynamic</Linkage-curl>
-    <Linkage-libssh2>dynamic</Linkage-libssh2>
-    <Linkage-openssl>dynamic</Linkage-openssl>
-    <Linkage-zlib>dynamic</Linkage-zlib>
+    <!--<Linkage-openssl>dynamic</Linkage-openssl>-->
+    <Linkage-secp256k1>static</Linkage-secp256k1>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LTCG')) != -1">
-    <Linkage-curl>ltcg</Linkage-curl>
-    <Linkage-libssh2>ltcg</Linkage-libssh2>
-    <Linkage-openssl>ltcg</Linkage-openssl>
-    <Linkage-zlib>ltcg</Linkage-zlib>
+    <!--<Linkage-openssl>ltcg</Linkage-openssl>-->
+    <Linkage-openssl>static</Linkage-openssl>
+    <Linkage-secp256k1>ltcg</Linkage-secp256k1>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LIB')) != -1">
-    <Linkage-curl>static</Linkage-curl>
-    <Linkage-libssh2>static</Linkage-libssh2>
     <Linkage-openssl>static</Linkage-openssl>
-    <Linkage-zlib>static</Linkage-zlib>
+    <Linkage-secp256k1>static</Linkage-secp256k1>
   </PropertyGroup>
 
   <!-- Messages -->
@@ -62,10 +56,8 @@
   </Target>
 
   <Target Name="LinkageInfo" BeforeTargets="PrepareForBuild">
-    <!--<Message Text="Linkage-curl      : $(Linkage-curl)" Importance="high"/>-->
-    <!--<Message Text="Linkage-libssh2   : $(Linkage-libssh2)" Importance="high"/>-->
     <Message Text="Linkage-openssl   : $(Linkage-openssl)" Importance="high"/>
-    <Message Text="Linkage-zlib      : $(Linkage-zlib)" Importance="high"/>
+    <Message Text="Linkage-secp256k1 : $(Linkage-secp256k1)" Importance="high"/>
   </Target>
 
 </Project>
