--- a/builds/msvc/vs2013/test/packages.config
+++ b/builds/msvc/vs2013/test/packages.config
@@ -8,10 +8,7 @@
   <package id="boost_unit_test_framework-vc120" version="1.55.0.16" targetFramework="Native" />
   <package id="Crc32C" version="1.0.4" targetFramework="Native" />
   <package id="LevelDB" version="1.16.0.5" targetFramework="Native" />
-  <package id="openssl" version="1.0.1.24" targetFramework="Native" />
-  <package id="openssl.redist" version="1.0.1.24" targetFramework="Native" />
+  <package id="openssl_no-asm_vc120" version="1.0.1.700" targetFramework="Native" />
   <package id="secp256k1_openssl_vc120" version="0.1.0.0" targetFramework="Native" />
   <package id="Snappy" version="1.1.1.7" targetFramework="Native" />
-  <package id="zlib" version="1.2.8.6" targetFramework="Native" />
-  <package id="zlib.redist" version="1.2.8.6" targetFramework="Native" />
 </packages>
