Update NuGet dependencies for updated EC.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.props
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.props
@@ -35,17 +35,19 @@
   <!-- Dependencies -->
   
   <PropertyGroup Condition="$(Configuration.IndexOf('DLL')) != -1">
-    <!--<Linkage-openssl>dynamic</Linkage-openssl>-->
-    <Linkage-secp256k1>static</Linkage-secp256k1>
+    <Linkage-openssl>dynamic</Linkage-openssl>
+    <!--<Linkage-secp256k1>dynamic</Linkage-secp256k1>-->
+    <Linkage-mpir>dynamic</Linkage-mpir>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LTCG')) != -1">
-    <!--<Linkage-openssl>ltcg</Linkage-openssl>-->
     <Linkage-openssl>static</Linkage-openssl>
     <Linkage-secp256k1>ltcg</Linkage-secp256k1>
+    <Linkage-mpir>static</Linkage-mpir>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LIB')) != -1">
     <Linkage-openssl>static</Linkage-openssl>
     <Linkage-secp256k1>static</Linkage-secp256k1>
+    <Linkage-mpir>static</Linkage-mpir>
   </PropertyGroup>
 
   <!-- Messages -->
@@ -58,6 +60,7 @@
   <Target Name="LinkageInfo" BeforeTargets="PrepareForBuild">
     <Message Text="Linkage-openssl   : $(Linkage-openssl)" Importance="high"/>
     <Message Text="Linkage-secp256k1 : $(Linkage-secp256k1)" Importance="high"/>
+    <Message Text="Linkage-mpir      : $(Linkage-mpir)" Importance="high"/>
   </Target>
 
 </Project>
