--- a/builds/msvc/vs2013/examples/libbitcoin_examples.props
+++ b/builds/msvc/vs2013/examples/libbitcoin_examples.props
@@ -36,17 +36,19 @@
   <PropertyGroup Condition="$(Configuration.IndexOf('DEXE')) != -1">
     <Linkage-openssl>dynamic</Linkage-openssl>
     <!--<Linkage-secp256k1>dynamic</Linkage-secp256k1>-->
-    <Linkage-secp256k1>static</Linkage-secp256k1>
+    <Linkage-mpir>dynamic</Linkage-mpir>
     <Linkage-libbitcoin>dynamic</Linkage-libbitcoin>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LEXE')) != -1">
     <Linkage-openssl>static</Linkage-openssl>
     <Linkage-secp256k1>ltcg</Linkage-secp256k1>
+    <Linkage-mpir>static</Linkage-mpir>
     <Linkage-libbitcoin>ltcg</Linkage-libbitcoin>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('SEXE')) != -1">
     <Linkage-openssl>static</Linkage-openssl>
     <Linkage-secp256k1>static</Linkage-secp256k1>
+    <Linkage-mpir>static</Linkage-mpir>
     <Linkage-libbitcoin>static</Linkage-libbitcoin>
   </PropertyGroup>
 
@@ -59,8 +61,9 @@
 
   <Target Name="LinkageInfo" BeforeTargets="PrepareForBuild">
     <Message Text="Linkage-openssl   : $(Linkage-openssl)" Importance="high"/>
-    <Message Text="Linkage-libbitcoin: $(Linkage-libbitcoin)" Importance="high"/>
     <Message Text="Linkage-secp256k1 : $(Linkage-secp256k1)" Importance="high"/>
+    <Message Text="Linkage-mpir      : $(Linkage-mpir)" Importance="high"/>
+    <Message Text="Linkage-libbitcoin: $(Linkage-libbitcoin)" Importance="high"/>
   </Target>
 
 </Project>
