Add script_number to VS builds.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClCompile Include="..\..\..\..\src\utility\ec_keys.cpp">
       <Filter>src\utility</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\utility\script_number.cpp">
+      <Filter>src\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\src\blockchain\leveldb\leveldb_organizer.hpp">
@@ -368,6 +371,9 @@
       <Filter>include\utility\external</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\ec_keys.hpp">
+      <Filter>include\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\script_number.hpp">
       <Filter>include\utility</Filter>
     </ClInclude>
   </ItemGroup>
