--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="..\..\..\..\src\utility\logger.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\mmfile.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\hash.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\script_number.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\timed_section.cpp" />
     <ClCompile Include="..\..\..\..\src\validate.cpp" />
   </ItemGroup>
@@ -260,6 +261,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\external\zeroize.h" />
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\logger.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\mmfile.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\utility\script_number.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\serializer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\hash.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\utility\subscriber.hpp" />
