--- a/builds/msvc/vs2013/examples/libbitcoin_examples.props
+++ b/builds/msvc/vs2013/examples/libbitcoin_examples.props
@@ -16,7 +16,6 @@
       <PreprocessorDefinitions>_WIN32_WINNT=0x0600;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="$(Configuration.IndexOf('Release')) != -1">BITCOIN_DISABLE_ASSERTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <!-- BUGBUG: there are linker errors in two examples. -->
     <Link>
       <AdditionalOptions Condition="$(Configuration.IndexOf('Debug')) != -1">/OPT:NOLBR /IGNORE:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -35,13 +34,14 @@
   
   <PropertyGroup Condition="$(Configuration.IndexOf('DEXE')) != -1">
     <Linkage-openssl>dynamic</Linkage-openssl>
-    <!--<Linkage-secp256k1>dynamic</Linkage-secp256k1>-->
+    <!-- There is not yet a dynamic build for secp256k1 -->
+    <Linkage-secp256k1>static</Linkage-secp256k1>
     <Linkage-mpir>dynamic</Linkage-mpir>
     <Linkage-libbitcoin>dynamic</Linkage-libbitcoin>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration.IndexOf('LEXE')) != -1">
     <Linkage-openssl>static</Linkage-openssl>
-    <Linkage-secp256k1>ltcg</Linkage-secp256k1>
+    <Linkage-secp256k1>static</Linkage-secp256k1>
     <Linkage-mpir>static</Linkage-mpir>
     <Linkage-libbitcoin>ltcg</Linkage-libbitcoin>
   </PropertyGroup>
