--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,10 @@ Source: libbitcoin0
 Section: libs
 Priority: optional
 Maintainer: Pablo Castellano <pablo@anche.no>
-Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libdb++-dev, libcurl4-openssl-dev, libleveldb-dev
+Build-Depends: debhelper (>= 8.1.3~), pkg-config, autoconf, automake, autotools-dev, libtool, libboost-all-dev, libcurl4-openssl-dev, libleveldb-dev
 Standards-Version: 3.9.4
-Vcs-Git: https://github.com/spesmilo/libbitcoin.git
-Vcs-Browser: https://github.com/spesmilo/libbitcoin
+Vcs-Git: https://github.com/libbitcoin/libbitcoin.git
+Vcs-Browser: https://github.com/libbitcoin/libbitcoin
 Homepage: http://libbitcoin.dyne.org/
 
 Package: libbitcoin-dev
